fixtures/validation/ui-toolkit-graphics-package/invalid/symlink-escape/outside/Layout/Outside.uxml
<ui:UXML xmlns:ui="UnityEngine.UIElements">
  <ui:VisualElement name="outside" />
</ui:UXML>
